--- a/config.tex
+++ b/config.tex
@@ -23,7 +23,7 @@
 % which change the colors and layouts of slides. Below this is a list
 % of all the themes, uncomment each in turn to see what they look like.
 
-%\usetheme{default}
+% \usetheme{default}
 %\usetheme{AnnArbor}
 %\usetheme{Antibes}
 %\usetheme{Bergen}
@@ -32,7 +32,7 @@
 %\usetheme{Boadilla}
 %\usetheme{CambridgeUS}
 %\usetheme{Copenhagen}
-%\usetheme{Darmstadt}
+% \usetheme{Darmstadt}
 %\usetheme{Dresden}
 %\usetheme{Frankfurt}
 %\usetheme{Goettingen}
@@ -43,7 +43,7 @@
 \usetheme{Madrid}
 %\usetheme{Malmoe}
 %\usetheme{Marburg}
-%\usetheme{Montpellier}
+% \usetheme{Montpellier}
 %\usetheme{PaloAlto}
 %\usetheme{Pittsburgh}
 %\usetheme{Rochester}
@@ -65,17 +65,62 @@
 %\usecolortheme{lily}
 %\usecolortheme{orchid}
 %\usecolortheme{rose}
-%\usecolortheme{seagull}
-%\usecolortheme{seahorse}
-%\usecolortheme{whale}
+% \usecolortheme{seagull}
+% \usecolortheme{seahorse}
+\usecolortheme{whale}
 %\usecolortheme{wolverine}
 
 %\setbeamertemplate{footline} % To remove the footer line in all slides uncomment this line
 %\setbeamertemplate{footline}[page number] % To replace the footer line in all slides with a simple slide count uncomment this line
 
-%\setbeamertemplate{navigation symbols}{} % To remove the navigation symbols from the bottom of all slides uncomment this line
+\setbeamertemplate{navigation symbols}{} % To remove the navigation symbols from the bottom of all slides uncomment this line
 }
 
-\usepackage{graphicx} % Allows including images
+%----------------------------------------------------------------------------------------
+%	PACKAGES
+%----------------------------------------------------------------------------------------
+
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
- 
+% ------- Français -----------	
+\usepackage[francais]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+%
+\usepackage{graphicx}
+% \usepackage{subfigure}
+% \usepackage{float}
+% \usepackage{lmodern}
+% \usepackage{ae,aecompl}
+% \usepackage{enumitem}
+% \usepackage{scalerel}
+% \usepackage{textcomp}
+% % --------------------------------	
+% %	Caractères mathématiques
+% \usepackage{amsmath}
+% \usepackage{systeme}
+% \usepackage{amsfonts}
+% \usepackage{mathabx}
+%
+% % Vector column type
+% \newcount\colveccount
+% \newcommand*\colvec[1]{
+%         \global\colveccount#1
+%         \begin{pmatrix}
+%         \colvecnext
+% }
+% \def\colvecnext#1{
+%         #1
+%         \global\advance\colveccount-1
+%         \ifnum\colveccount>0
+%                 \\
+%                 \expandafter\colvecnext
+%         \else
+%                 \end{pmatrix}
+%         \fi
+% }
+%    
+
+% ======================
+% 		GRAPHIC
+% \usepackage{amssymb}
+% \usepackage{xcolor}
