--- a/config.tex
+++ b/config.tex
@@ -87,6 +87,8 @@
 \usepackage[T1]{fontenc}
 %
 \usepackage{graphicx}
+\usepackage{caption}
+\setbeamertemplate{itemize item}[triangle]
 % \usepackage{subfigure}
 % \usepackage{float}
 % \usepackage{lmodern}
